[tool.poetry]
name = "featureengineering"
version = "0.1.0"
description = ""
authors = ["andreale28 <lhson43680@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
pandas = "^1.4.3"
sklearn = "^0.0"
matplotlib = "^3.5.3"
hvplot = "^0.8.1"
jupyterlab = "^3.4.5"
jupyter = "^1.0.0"
plotly = "^5.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
